<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".StoperFragment">

    <TextView
        android:id="@+id/time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textSize="56sp"  />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <ImageButton
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:tint="@color/white"
            android:background="?attr/colorPrimary"
            android:src="@drawable/play_arrow_48px"
            app:layout_constraintEnd_toStartOf="@+id/stop_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/start" />

        <ImageButton
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="2dp"
            app:tint="@color/white"
            android:background="?attr/colorPrimary"
            android:src="@drawable/pause_48px"
            app:layout_constraintEnd_toStartOf="@+id/reset_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/start_button"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/stop" />

        <ImageButton
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="2dp"
            app:tint="@color/white"
            android:background="?attr/colorPrimary"
            android:src="@drawable/stop_48px"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/stop_button"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/reset" />

        <ImageButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="2dp"
            app:tint="@color/white"
            android:background="?attr/colorPrimary"
            android:src="@drawable/save_48px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/reset_button"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/save" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/trailName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="10dp"
        android:text="@string/saved_times"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="300dp">
        <ListView
            android:id="@+id/timesListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="10dp"
            android:divider="?attr/colorAccent">
        </ListView>
    </LinearLayout>
</LinearLayout>